--- a/configs/semantic-kitti.yaml
+++ b/configs/semantic-kitti.yaml
@@ -210,3 +210,25 @@ split: # sequence numbers
     - 19
     - 20
     - 21
+sensor:
+    name: "HDL64"
+    type: "spherical" # projective
+    fov_up: 3
+    fov_down: -25 
+    foh_left: 45
+    foh_right: -45
+    img_prop:
+      width: 256
+      height: 64
+    img_means: #range,x,y,z,signal
+      - 12.12
+      - 10.88
+      - 0.23
+      - -1.04
+      - 0.21
+    img_stds: #range,x,y,z,signal
+      - 12.32
+      - 11.47
+      - 6.91
+      - 0.86
+      - 0.16
