--- a/configs/train_pix2pix.yaml
+++ b/configs/train_pix2pix.yaml
@@ -6,8 +6,6 @@ training:
   lr: 0.0002
   batch_size: 8
   fast_test: True
-  name: normal_wo_label
-  max_dataset_size: -1
   gpu_ids: [0]
   checkpoints_dir: './checkpoints'
   epoch: 'latest'
@@ -18,9 +16,7 @@ training:
   save_latest_freq: 1000
   verbose: False
   suffix : ''
-  val_split_ratio: 0.2
   seed: 6
-  n_workers: 2
   calc_FID: False
   lr_policy: 'linear'
   lr_decay_iters: 50
@@ -28,14 +24,12 @@ training:
 model:
   # model params
   name: 'pix2pix'
-  input_nc_G: 1
-  output_nc_G: 2
-  input_nc_D: 2
   modality_A: ['label']
-  modality_B: 'inv'
+  modality_B: ['inv', 'reflectance']
   out_ch:
     inv: 1
     mask: 1
+    reflectance: 1
   ngf : 64
   ndf: 64
   netD: 'basic'
@@ -57,7 +51,7 @@ model:
 dataset:
   dataset_A:
     data_dir: '/media/hamed/Local Disk/Phd_datasets/KITTI/dataset'
-    modality: ['depth', 'label']
+    modality: ['depth', 'label', 'reflectance']
     min_depth: 0.9
     max_depth: 120.0
     is_sorted: True
