--- a/configs/train_pix2pix.yaml
+++ b/configs/train_pix2pix.yaml
@@ -6,6 +6,7 @@ training:
   lr: 0.0002
   batch_size: 8
   fast_test: True
+  test: True
   gpu_ids: [0]
   checkpoints_dir: './checkpoints'
   epoch: 'latest'
