--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,10 @@ configs/
 rangenet/rangenet_weights
 fid_stats/
 rangenet/rangenet_weights_sp
+checkpoints_new_cond/
+checkpoints_new_cond_no_label_norm/
+checkpoints_new_lr/
+checkpoints_sp_new_cond/
+checkpoints_sp_new_cond_plus/
+checkpoints_sp_no_label_norm/
+
