update readme + few updates on visualisation and logging

--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,7 @@ fid_stats/
 rangenet/rangenet_weights_sp
 checkpoints_new_cond/
 checkpoints_new_cond_no_label_norm/
-checkpoints_new_lr/
 checkpoints_sp_new_cond/
 checkpoints_sp_new_cond_plus/
 checkpoints_sp_no_label_norm/
-
+checkpoints_new_lr
